# CodeExpertSync

./: .env  .env-template  .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .yarnrc.yml  CHANGELOG.md  LICENSE.md  README.md  entitlements.plist  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  shell.nix  tsconfig.json  tsconfig.options.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: chromatic.yml  ci-rust.yml  ci-web.yml  ci.yml  release.yml
.storybook/: main.ts  preview.ts  tsconfig.json
.storybook/api/: index.ts
artwork/: Makefile  README.md  shell.nix
scripts/: clean-setup  setup
src/: .eslintrc.js  App.stories.tsx  App.tsx  AuthToken.tsx  Updater.tsx  ambient.d.ts  config.ts  global.css  index.ts  index.tsx  reset.css  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  system_tray.rs
src-tauri/src/commands/: app.rs  build_tar.rs  create_jwt_token.rs  create_keys.rs  fs_extra.rs  get_file_hash.rs  make_readonly.rs  mod.rs  path.rs  system_info.rs
src-tauri/src/system_tray/: window_helpers.rs
src-tauri/src/utils/: mod.rs  prelude.rs  tee_writer.rs  window.rs
src/api/: index.ts
src/application/: registerApp.ts  verifyProjectConsistency.ts
src/domain/: AppId.ts  AuthState.ts  AuthToken.ts  ClientId.ts  File.ts  FileState.ts  OpenException.ts  Project.ts  ProjectAccess.ts  ProjectConfig.ts  ProjectFiles.ts  ProjectMetadata.ts  ProjectRepository.ts  Semester.tests.ts  Semester.ts  Setup.ts  ShellException.ts  SyncException.ts  SyncState.ts  UserInfo.ts  createAPIRequest.ts  createSignedAPIRequest.ts  exception.tests.ts  exception.ts  identity.ts  openProject.ts
storybook-static/: iframe.html  index.html  index.json  project.json  stories.json
(+304 files in other folders)
